tests/error/tracing_errors/array_incoherent_tys.err
Error: Error in comptime function return (at $FILE:6:0)
  | 
4 | 
5 | @guppy.comptime
6 | def test(xs: array[int, 10]) -> None:
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 |     xs[1] = 1.0
  | ^^^^^^^^^^^^^^^

Argument `xs` is borrowed, so it is implicitly returned to the caller. Element
at index 1 does not match the type of previous elements. Expected `int`, got
`float`.

Guppy compilation failed due to 1 previous error
